Add profitability graphs.

--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "prop-types": "^15.8.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
