--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "croppie": "^2.6.5",
     "database-cleaner": "^1.3.0",
     "date-holidays": "^3.16.10",
+    "dayjs": "^1.11.13",
     "deep-object-diff": "^1.1.9",
     "downshift": "^7.0.4",
     "dropzone": "^5.9.3",
