Make heatmap using Nivo.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@cubejs-client/react": "^0.34.0",
     "@hotwired/stimulus": "^3.2.2",
     "@mapbox/polyline": "^1.1.0",
+    "@nivo/core": "^0.87.0",
+    "@nivo/heatmap": "^0.87.0",
     "@react-css/grid": "^2.2.0",
     "@react-hook/size": "^2.1.2",
     "@reduxjs/toolkit": "^1.8.6",
@@ -130,7 +132,6 @@
     "prop-types": "^15.8.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
     "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
