use postgres 16 on dev env

--- a/.env.dist
+++ b/.env.dist
@@ -18,7 +18,7 @@ COOPCYCLE_DB_HOST=postgres
 COOPCYCLE_DB_PORT=5432
 COOPCYCLE_DB_NAME=coopcycle
 COOPCYCLE_DB_USER=postgres
-COOPCYCLE_DB_PASSWORD=
+COOPCYCLE_DB_PASSWORD=ThisPasswordIsNotSoSecretChangeIt
 COOPCYCLE_REDIS_DSN=redis://redis:6379
 COOPCYCLE_OAUTH_FACEBOOK_CLIENT_ID=YourFacebookClientId
 COOPCYCLE_OAUTH_FACEBOOK_CLIENT_SECRET=YourFacebookClientSecret
