--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,11 @@ services:
 
   postgres:
     restart: always
-    image: mdillon/postgis:9.4-alpine
+    image: postgis/postgis:16-3.4-alpine
     environment:
       - POSTGRES_DB=${COOPCYCLE_DB_NAME}
+      - POSTGRES_USER=${COOPCYCLE_DB_USER}
+      - POSTGRES_PASSWORD=${COOPCYCLE_DB_PASSWORD}
     ports:
       - '5432:5432'
     volumes:
