log database write operations

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -740,7 +740,7 @@ services:
     tags:
       - { name: doctrine.event_subscriber }
 
-  AppBundle\Doctrine\EventSubscriber\CheckoutSubscriber:
+  AppBundle\Doctrine\EventSubscriber\LoggerSubscriber:
     tags:
       - { name: doctrine.event_subscriber }
 
