Add instance claim to Cube JWT.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1343,6 +1343,7 @@ services:
       $databaseName: '%database_name%'
       $baseUrl: '%router.request_context.scheme%://%router.request_context.host%'
       $s3Path: '%env(CUBEJS_DUCKDB_S3_PATH)%'
+      $appName: '%env(COOPCYCLE_APP_NAME)%'
 
   AppBundle\Translation\DatePeriodFormatter:
     arguments:
