--- a/features/fixtures/ORM/stores.yml
+++ b/features/fixtures/ORM/stores.yml
@@ -109,6 +109,7 @@ AppBundle\Entity\Store:
     pricingRuleSet: '@pricing_rule_set_1'
     packageSet: '@package_set_1'
     timeSlot: '@time_slot_1'
+    timeSlots: [ "@time_slot_1", "@time_slot_2" ]
     __calls:
       - addAddress: [ "@address_1" ]
   store_2:
