clean: apply delays in ShippingDate filter directly + set middle of slot as dropoff

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -529,6 +529,8 @@ services:
   AppBundle\Utils\PreparationTimeResolver: ~
 
   AppBundle\Utils\ShippingDateFilter:
+    arguments:
+      $redis: "@snc_redis.default"
     tags:
       - { name: monolog.logger, channel: timing }
 
@@ -537,7 +539,6 @@ services:
   AppBundle\Utils\OrderTimeHelper:
     arguments:
       $country: "%country_iso%"
-      $redis: "@snc_redis.default"
     tags:
       - { name: monolog.logger, channel: timing }
 
