--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -304,13 +304,15 @@ doctrine:
             numrange: string
             tsrange: string
 
+        # Tells Doctrine what database features are supported
+        # Make sure that your production database uses this version or higher.
         # If you don't define this option and you haven't created your database yet,
         # you may get PDOException errors because Doctrine will try to guess
         # the database server version automatically and none is available.
         # http://symfony.com/doc/current/reference/configuration/doctrine.html
         # Should be fixed in next Doctrine version
         # https://github.com/doctrine/dbal/pull/2671
-        server_version: 9.4
+        server_version: '13'
 
         # Add a schema filter to avoid having PostGIS tables tiger.* & topology.* in migrations diff
         # https://symfony.com/doc/master/bundles/DoctrineMigrationsBundle/index.html#manual-tables
