--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -625,6 +625,8 @@ services:
   sylius.repository.order:
     alias: AppBundle\Entity\Sylius\OrderRepository
 
+  AppBundle\Entity\TaskListRepository: ~
+
   AppBundle\Entity\Task\RecurrenceRuleRepository: ~
 
   AppBundle\Service\Routing\Osrm: ~
