--- a/cypress/fixtures/business_account_manager_invitation_existing_user.yml
+++ b/cypress/fixtures/business_account_manager_invitation_existing_user.yml
@@ -16,7 +16,7 @@ AppBundle\Entity\User:
 
 AppBundle\Entity\Invitation:
   invitation1:
-    code: 'INVITATION_MANAGER'
+    code: 'INVITATION_MANAGER_A'
     email: 'user01@demo.coopcycle.org'
     user: '@admin'
     __calls:
