--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -144,7 +144,7 @@ jobs:
           # https://github.com/cypress-io/github-action?tab=readme-ov-file#build-app
           # build: npm run dev
           spec: |
-            cypress/e2e/foodtech/platform-catering/*.cy.js
+            cypress/e2e/**/*.cy.js
         # after the test run completes store videos and any screenshots
       - name: Upload images for failed tests
         uses: actions/upload-artifact@v4
