fix: use built-in GITHUB_TOKEN to authenticate composer

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           tools: composer:v2
           extensions: redis
         env:
-          GITHUB_TOKEN: ${{ secrets.COMPOSER_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: composer install --prefer-dist --no-progress --no-scripts
       - run: npm ci
       - name: Install dependencies
