Improve code to load failure reasons.
- Centralize loading & translations.
- Add caching.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1487,3 +1487,5 @@ services:
       - '@Paygreen\Sdk\Payment\V3\Environment'
 
   AppBundle\Sylius\Payment\Context: ~
+
+  AppBundle\Entity\Delivery\FailureReasonRegistry: ~
