feat(colisactiv): add an option to export delivery including unfinished tasks in the ColisActiv format
Fixes: #4698

--- a/app/config/services/forms.yml
+++ b/app/config/services/forms.yml
@@ -277,6 +277,7 @@ services:
         default: '@AppBundle\Spreadsheet\DeliveryDataExporter'
         dv4cul: '@AppBundle\Spreadsheet\DV4CULDataExporter'
         colisactiv: '@AppBundle\Spreadsheet\ColisActivDataExporter'
+        colisactiv_all: '@AppBundle\Spreadsheet\ColisActivDataExporter'
     tags: [ form.type ]
 
   AppBundle\Form\Order\AdhocOrderType:
