fix: configure `ColisActivDataExporter` via the dependency injection

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1280,7 +1280,16 @@ services:
 
   AppBundle\Spreadsheet\DeliveryDataExporter: ~
   AppBundle\Spreadsheet\DV4CULDataExporter: ~
-  AppBundle\Spreadsheet\ColisActivDataExporter: ~
+
+  colisactiv:
+    class: AppBundle\Spreadsheet\ColisActivDataExporter
+    arguments:
+      $includeAllTasks: false
+
+  colisactiv_all:
+    class: AppBundle\Spreadsheet\ColisActivDataExporter
+    arguments:
+      $includeAllTasks: true
 
   AppBundle\Edenred\Authentication:
     arguments:
