--- a/app/config/services/serializer.yml
+++ b/app/config/services/serializer.yml
@@ -30,7 +30,7 @@ services:
       - "@api_platform.jsonld.normalizer.item"
     tags: [ { name: serializer.normalizer, priority: 128 } ]
 
-  AppBundle\Serializer\MyTaskListNormalizer:
+  AppBundle\Serializer\MyTaskListDtoNormalizer:
     arguments:
       - "@api_platform.jsonld.normalizer.object"
     tags: [ { name: serializer.normalizer, priority: 128 } ]
