--- a/app/config/services/serializer.yml
+++ b/app/config/services/serializer.yml
@@ -30,6 +30,11 @@ services:
       - "@api_platform.jsonld.normalizer.item"
     tags: [ { name: serializer.normalizer, priority: 128 } ]
 
+  AppBundle\Serializer\MyTaskDtoNormalizer:
+    arguments:
+      - "@api_platform.jsonld.normalizer.item"
+    tags: [ { name: serializer.normalizer, priority: 128 } ]
+
   AppBundle\Serializer\MyTaskListDtoNormalizer:
     arguments:
       - "@api_platform.jsonld.normalizer.object"
