--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v2
       - uses: actions/setup-python@v1
         with:
-          python-version: 3.7
+          python-version: '3.x'
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
