--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -83,7 +83,7 @@ monolog:
         timing:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/timing.%kernel.environment%.log"
-            level: debug
+            level: info
             max_files: 7
             channels: [timing]
         checkout:
