added datadog integration

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -239,7 +239,10 @@ twig:
         - '@VichUploader/Form/fields.html.twig'
     globals:
         is_demo: "%is_demo%"
+        instance_name: "%env(COOPCYCLE_APP_NAME)%"
         sentry_public_dsn: "%sentry_public_dsn%"
+        datadog_client_token: "%env(COOPCYCLE_DATADOG_CLIENT_TOKEN)%"
+        datadog_application_id: "%env(COOPCYCLE_DATADOG_APPLICATION_ID)%"
         country_iso: "%country_iso%"
         region_iso: "%region_iso%"
         cart_provider: '@AppBundle\Service\CartProviderService'
