--- a/.env.dist
+++ b/.env.dist
@@ -47,6 +47,8 @@ COOPCYCLE_JWT_TTL=3600
 COOPCYCLE_OSRM_HOST=osrm:5000
 COOPCYCLE_DEMO=0
 COOPCYCLE_SENTRY_DSN=https://<public>@sentry.io/********
+COOPCYCLE_DATADOG_CLIENT_TOKEN=
+COOPCYCLE_DATADOG_APPLICATION_ID=
 APNS_PRIVATE_KEY_FILE=/dev/null
 APNS_CERTIFICATE_PASS_PHRASE=
 APNS_KEY_ID=
