--- a/src/Resources/config/routing/admin.yml
+++ b/src/Resources/config/routing/admin.yml
@@ -586,6 +586,18 @@ admin_store_orders_saved:
       store_addresses: admin_store_addresses
   methods:  [ GET ]
 
+admin_store_recurrence_rules:
+  path: /admin/stores/{id}/recurrence-rules
+  defaults:
+    _controller: AppBundle\Controller\AdminController::storeRecurrenceRulesAction
+    layout: 'admin.html.twig'
+    routes:
+      stores: admin_stores
+      store: admin_store
+      store_addresses: admin_store_addresses
+      store_recurrence_rule: admin_store_subscriptions
+  methods:  [ GET ]
+
 admin_store_delivery_new:
     path: /admin/stores/{id}/deliveries/new
     defaults:
