Implement Sentry using package manager.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@react-hook/size": "^2.1.2",
     "@reduxjs/toolkit": "^1.8.6",
     "@release-notes/changelog-parser": "^0.1.2",
+    "@sentry/browser": "^8.35.0",
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-links": "^7.5.3",
     "@storybook/blocks": "^7.5.3",
