--- a/src/Resources/config/routing/admin.yml
+++ b/src/Resources/config/routing/admin.yml
@@ -619,7 +619,7 @@ admin_store_delivery_download_images:
 admin_store_recurrence_rule:
   path: /admin/stores/{storeId}/recurrence-rules/{recurrenceRuleId}
   defaults:
-    _controller: AppBundle\Controller\AdminController::subscriptionAction
+    _controller: AppBundle\Controller\AdminController::recurrenceRuleAction
     layout: 'admin.html.twig'
     routes:
       success: admin_deliveries
