--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@cubejs-client/core": "^0.34.0",
     "@cubejs-client/playground": "^0.34.0",
     "@cubejs-client/react": "^0.34.0",
+    "@datadog/browser-logs": "^5.29.1",
+    "@datadog/browser-rum": "^5.29.1",
     "@hotwired/stimulus": "^3.2.2",
     "@mapbox/polyline": "^1.1.0",
     "@nivo/core": "^0.87.0",
