fix: set test adapter for delivery_imports

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -66,6 +66,9 @@ oneup_flysystem:
         product_imports:
             local:
                 location: '/tmp'
+        delivery_imports:
+            local:
+                location: '/tmp'
 
 liip_imagine:
     resolvers:
