Show a different message when there are zero waste fees. Fixes #4740.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -148,6 +148,9 @@ services:
   AppBundle\LoopEat\Context: ~
 
   AppBundle\LoopEat\ContextInitializer:
+    arguments:
+      $processingFee: "%env(int:LOOPEAT_PROCESSING_FEE)%"
+      $processingFeeBehavior: "%env(LOOPEAT_PROCESSING_FEE_BEHAVIOR)%"
     tags:
       - { name: monolog.logger, channel: loopeat }
 
