--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -272,6 +272,8 @@ twig:
         business_account_enabled: '%env(bool:BUSINESS_ACCOUNT_ENABLED)%'
         odoo_url: '%env(ODOO_URL)%'
         invitation_link_provider: '@AppBundle\Service\InvitationLinkProviderService'
+        loopeat_processing_fee: '%env(int:LOOPEAT_PROCESSING_FEE)%'
+        loopeat_processing_fee_behavior: '%env(LOOPEAT_PROCESSING_FEE_BEHAVIOR)%'
 
     exception_controller: null
 
