--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -279,7 +279,7 @@ twig:
 
 monolog:
   # channels to use with autowire; https://symfony.com/doc/current/logging/channels_handlers.html#how-to-autowire-logger-channels
-  channels: [ 'domain_event', 'checkout', 'database', 'push_notification', 'real_time_message' ]
+  channels: [ 'domain_event', 'checkout', 'database', 'push_notification', 'real_time_message', 'transporter' ]
 
 # Doctrine Configuration
 doctrine:
