--- a/app/config/services/forms.yml
+++ b/app/config/services/forms.yml
@@ -64,7 +64,7 @@ services:
     parent: AppBundle\Form\DeliveryType
     tags: [ form.type ]
 
-  AppBundle\Form\Order\OneOffOrderType:
+  AppBundle\Form\Order\ExistingOrderType:
     parent: AppBundle\Form\DeliveryType
     tags: [ form.type ]
 
