--- a/app/config/services/forms.yml
+++ b/app/config/services/forms.yml
@@ -68,7 +68,7 @@ services:
     parent: AppBundle\Form\DeliveryType
     tags: [ form.type ]
 
-  AppBundle\Form\Order\SubscriptionType:
+  AppBundle\Form\Order\ExistingRecurrenceRuleType:
     parent: AppBundle\Form\DeliveryType
     tags: [ form.type ]
 
