fixed: cash payment in the delivery form when it's enabled on the instance level

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -17,6 +17,8 @@ services:
     autowire: true
     autoconfigure: true
     public: false
+    bind:
+      $cashEnabled: '%env(bool:CASH_ON_DELIVERY_ENABLED)%'
 
   AppBundle\Action\:
     resource: '../../src/Action/*'
