exclude 'info' level logs on the messenger channel

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -154,6 +154,7 @@ monolog:
               "!php",
               "!cache",
               "!security",
+              "!messenger",
               "!request"
             ]
             min_level: info
@@ -165,6 +166,7 @@ monolog:
               php,
               cache,
               security,
+              messenger
               request
             ]
             min_level: warning
