hotfix: exclude 'info' level logs on the messenger channel

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -166,7 +166,7 @@ monolog:
               php,
               cache,
               security,
-              messenger
+              messenger,
               request
             ]
             min_level: warning
