--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -260,6 +260,56 @@ services:
     logging:
       driver: none
 
+  storybook-react:
+    build:
+      dockerfile: './docker/storybook-react/Dockerfile'
+      context: '.'
+    ports:
+      - '6007:6007'
+    depends_on:
+      - webpack
+    volumes:
+      # https://stackoverflow.com/questions/29181032/add-a-volume-to-docker-but-exclude-a-sub-folder
+      - '.:/srv/coopcycle'
+      - 'node_modules_webpack:/srv/coopcycle/node_modules/'
+
+  storybook:
+    build:
+      dockerfile: './docker/storybook/Dockerfile'
+      context: '.'
+    ports:
+      - '6006:6006'
+    depends_on:
+      - webpack
+      - storybook-react
+    volumes:
+      # https://stackoverflow.com/questions/29181032/add-a-volume-to-docker-but-exclude-a-sub-folder
+      - '.:/srv/coopcycle'
+      - 'node_modules_webpack:/srv/coopcycle/node_modules/'
+
+  odoo-web:
+    image: odoo:17.0
+    depends_on:
+      - odoo-db
+    ports:
+      - "8069:8069"
+    environment:
+      - HOST=odoo-db
+      - PORT=5433
+    volumes:
+      - odoo-web-data:/var/lib/odoo
+
+  odoo-db:
+    image: postgres:15
+    ports:
+      - "5433:5433"
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_PASSWORD=odoo
+      - POSTGRES_USER=odoo
+      - PGPORT=5433
+    volumes:
+      - odoo-db-data:/var/lib/postgresql/data
 
 volumes:
   node_modules_webpack:
@@ -270,3 +320,5 @@ volumes:
   webpack_php_cache:
   php_logs:
   php_public_images:
+  odoo-web-data:
+  odoo-db-data:
