Avoid error on Urbantz webhook endpoint, add logs.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -882,6 +882,8 @@ services:
     public: true
     arguments:
       $country: "%country_iso%"
+    tags:
+      - { name: monolog.logger, channel: urbantz }
 
   AppBundle\Action\GoogleSignIn:
     public: true
