--- a/cypress/fixtures/stores.yml
+++ b/cypress/fixtures/stores.yml
@@ -3,10 +3,10 @@ include:
   - sylius_taxation.yml
 
 AppBundle\Entity\Base\GeoCoordinates:
-  geo_1:
-    __construct: [ "48.864577", "2.333338" ]
-  geo_2:
-    __construct: [ "48.846656", "2.369052" ]
+  geo_warehouse:
+    __construct: [ "48.8758311", "2.3675732" ]
+  geo_client_1:
+    __construct: [ "48.8638614", "2.3762269" ]
 
 AppBundle\Entity\Delivery\PricingRuleSet:
   pricing_rule_set_1:
@@ -42,16 +42,16 @@ AppBundle\Entity\Address:
     telephone: <identity(\libphonenumber\PhoneNumberUtil::getInstance()->parse('+33112121212'))>
     addressLocality: 'Paris'
     postalCode: '75001'
-    streetAddress: '272, rue Saint Honoré 75001 Paris 1er'
-    geo: "@geo_1"
+    streetAddress: '23, Avenue Claude Vellefaux, 75010 Paris, France'
+    geo: "@geo_warehouse"
   client_1:
     name: 'Office'
     contactName: 'Jane smith'
     telephone: <identity(\libphonenumber\PhoneNumberUtil::getInstance()->parse('+33112121414'))>
     addressLocality: 'Paris'
     postalCode: '75009'
-    streetAddress: '17, rue Milton 75009 Paris 9ème'
-    geo: "@geo_3"
+    streetAddress: '72, Rue Saint-Maur, 75011 Paris, France'
+    geo: "@geo_client_1"
 
 AppBundle\Entity\Store:
   store_1:
