added: endpoint to get orders per store

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -947,6 +947,12 @@ services:
       - { name: 'api_platform.subresource_data_provider', priority: 2 }
     autoconfigure: false
 
+  AppBundle\Api\DataProvider\StoreOrdersSubresourceDataProvider:
+    arguments:
+      $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
+    tags:
+      - { name: 'api_platform.subresource_data_provider', priority: 2 }
+
   AppBundle\Api\DataProvider\UrbantzWebhookEventDataProvider: ~
 
   AppBundle\Api\DataProvider\TaxRateCollectionDataProvider:
