allow a client to customise page size

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -359,6 +359,9 @@ doctrine:
             Sylius\Component\Order\Model\OrderInterface: AppBundle\Sylius\Order\OrderInterface
 
 api_platform:
+    defaults:
+        pagination_client_items_per_page: true
+        pagination_maximum_items_per_page: 100
     version: 1.0.0
     title: CoopCycle
     show_webby: false
