--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -277,6 +277,7 @@ twig:
         invitation_link_provider: '@AppBundle\Service\InvitationLinkProviderService'
         loopeat_processing_fee: '%env(int:LOOPEAT_PROCESSING_FEE)%'
         loopeat_processing_fee_behavior: '%env(LOOPEAT_PROCESSING_FEE_BEHAVIOR)%'
+        paygreen_environment: '%env(PAYGREEN_ENVIRONMENT)%'
 
     exception_controller: null
 
