WIP: endpoint to return Invoice line items

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -953,6 +953,12 @@ services:
     tags:
       - { name: 'api_platform.subresource_data_provider', priority: 2 }
 
+  AppBundle\Api\DataProvider\InvoiceLineItemCollectionDataProvider:
+    arguments:
+      $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
+    tags:
+      - { name: 'api_platform.collection_data_provider', priority: 2 }
+
   AppBundle\Api\DataProvider\UrbantzWebhookEventDataProvider: ~
 
   AppBundle\Api\DataProvider\TaxRateCollectionDataProvider:
